--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,8 +1,9 @@
 body {
   font-family: "Arial", "Meiryo", sans-serif;
   text-align: center;
+  font-size: 20px;
 }
- p, h2 {
+p, h2 {
   font-size: 20px;
 }
 .blue {
@@ -18,7 +19,7 @@ h1 {
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
-  font-size: 40px;
+  font-size: 2rem;
   letter-spacing: 1.2em;
   text-shadow: 1px 1px 2px gray;
   border-bottom: solid 3px rgb(115, 115, 114);
